<resources>
    <string name="app_name">medicare_app_param</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="doctor_appointment">Doctor appointment, buy medicines, online consultaion with top doctor, and find nearby hospital</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_Gmail">Continue with Gmail</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_with_email_">Continue with Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="features_">Please login first to use Wellness Experts feature</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_">Sign in</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="_google">Google</string>
    <string name="_apple">Apple</string>
    <string name="email">Email</string>
    <string name="email__">Email</string>
    <string name="phone">Phone</string>
    <string name="_already_have_an_account">Already have an account?</string>
    <string name="sign__in_">Sign in</string>
    <string name="todo">TODO</string>
    <string name="__feature__">PLease login first to you Wellness Expert feature</string>
    <string name="_feature_">Please login first to use Wellness Expert Feature</string>
    <string name="hello_user">Hello, User!</string>
    <string name="appointment">Appointment</string>
    <string name="hospital">Hospital</string>
    <string name="intro">Hello, User!</string>
    <string name="search_a_doctor_or_health_issue">🔍 Search a doctor or health issue</string>
    <string name="todo11">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="doctor">Doctor</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="todo15">TODO</string>
    <string name="_3">3</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="see_all">See all</string>
    <string name="general_practitioner">General Practitioner</string>
    <string name="dr_manas_jha">Dr. Manas Jha</string>
    <string name="heart_surgeon">Heart Surgeon</string>
    <string name="dr_dhruv_jha">Dr. Dhruv Jha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo21">TODO</string>
    <string name="doctor_">Doctor</string>
    <string name="search_a_doctor">🔍 Search a doctor</string>
    <string name="recommended_by_you">Recommended by you</string>
    <string name="nearby_you">Nearby you</string>
    <string name="nearby_you_">Nearby You</string>
    <string name="todo31">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>