<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/email_frame"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/d1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="31dp"
        android:width="102dp"
        android:height="80dp"
        android:contentDescription="@string/todo1"
        android:src="@drawable/dt1"
        app:layout_constraintBottom_toTopOf="@+id/d2"
        app:layout_constraintEnd_toStartOf="@+id/d4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/d2"
        android:layout_width="106dp"
        android:layout_height="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:width="102dp"
        android:height="80dp"
        android:contentDescription="@string/todo2"
        android:src="@drawable/dt2"
        app:layout_constraintBottom_toTopOf="@+id/d3"
        app:layout_constraintEnd_toStartOf="@+id/d6"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/d1" />

    <ImageView
        android:id="@+id/d3"
        android:layout_width="118dp"
        android:layout_height="0dp"
        android:layout_marginBottom="409dp"
        android:contentDescription="@string/todo3"
        android:src="@drawable/dt3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <ImageView
        android:id="@+id/d4"
        android:layout_width="122dp"
        android:layout_height="121dp"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/todo4"
        android:src="@drawable/dt4"
        app:layout_constraintBottom_toTopOf="@+id/d5"
        app:layout_constraintEnd_toStartOf="@+id/d7"
        app:layout_constraintStart_toEndOf="@+id/d1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/d5"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="-6dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo5"
        android:src="@drawable/dt5"
        app:layout_constraintBottom_toTopOf="@+id/d6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d4" />

    <ImageView
        android:id="@+id/d6"
        android:layout_width="128dp"
        android:layout_height="90dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo6"
        android:src="@drawable/dt6"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/d8"
        app:layout_constraintStart_toEndOf="@+id/d2"
        app:layout_constraintTop_toBottomOf="@+id/d5" />

    <ImageView
        android:id="@+id/d7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/todo7"
        android:src="@drawable/dt7"
        app:layout_constraintBottom_toTopOf="@+id/d8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/d4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/d8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo8"
        android:src="@drawable/dt8"
        app:layout_constraintBottom_toTopOf="@+id/d9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/d6"
        app:layout_constraintTop_toBottomOf="@+id/d7" />

    <ImageView
        android:id="@+id/d9"
        android:layout_width="101dp"
        android:layout_height="82dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="409dp"
        android:contentDescription="@string/todo9"
        android:src="@drawable/dt9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/d8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/d8"
        app:layout_constraintTop_toBottomOf="@+id/d8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="181dp"
        android:layout_height="58dp"
        android:layout_marginBottom="339dp"
        android:text="@string/get_started"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="305dp"
        android:layout_height="38dp"
        android:text="@string/doctor_appointment"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="226dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/d3"
        app:layout_constraintGuide_begin="7dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="256dp"
        android:layout_height="53dp"
        android:background="@drawable/email_frame"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="5dp"
        android:padding="17dp"
        android:paddingStart="50dp"
        android:text="@string/continue_with_email_"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="256dp"
        android:layout_height="53dp"
        android:background="@drawable/email_frame"
        android:drawableLeft="@drawable/google_logo"
        android:drawablePadding="5dp"
        android:padding="17dp"
        android:paddingStart="50dp"
        android:text="@string/continue_with_Gmail"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="256dp"
        android:layout_height="53dp"
        android:background="@drawable/email_frame"
        android:drawableLeft="@drawable/apple_logo_final"
        android:drawablePadding="5dp"
        android:padding="17dp"
        android:paddingStart="50dp"
        android:text="@string/continue_with_apple"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="164dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/already_have_an_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="68dp"
        android:layout_height="33dp"
        android:text="@string/sign_in"
        android:textColor="#50A5AE"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.903" />


</androidx.constraintlayout.widget.ConstraintLayout>