<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:padding="6dp"
    android:paddingStart="10dp"
    tools:context=".Sign_in_page"
    tools:ignore="RtlSymmetry">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_feature_"
        android:textAlignment="viewStart"
        android:textColor="#636060"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="656dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:rippleColor="@color/white"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/email_frame"
        android:backgroundTint="@color/light_blue"
        android:padding="12dp"
        android:paddingStart="10dp"
        android:text="@string/email__"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="213dp"
        android:layout_height="51dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/email_frame"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="60dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="213dp"
        android:layout_height="51dp"
        android:layout_marginTop="376dp"
        android:autofillHints=""
        android:background="@drawable/email_frame"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="58dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        android:textColor="#99004C"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <Button
        android:id="@+id/button"
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:layout_marginBottom="192dp"
        android:backgroundTint="#50A5AE"
        android:textColor="@color/white"
        android:text="@string/sign_in_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/button" />

    <View
        android:id="@+id/view"
        android:layout_width="118dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="168dp"
        android:background="#424040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <View
        android:id="@+id/view2"
        android:layout_width="118dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="168dp"
        android:background="#424040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/email_frame"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:text="@string/_google"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:drawableLeftCompat="@drawable/google_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/email_frame"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:text="@string/_apple"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:drawableLeftCompat="@drawable/apple_logo_final"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_already_have_an_account"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.578" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign__in_"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="370dp" />


</androidx.constraintlayout.widget.ConstraintLayout>